really i dont know what's going on, initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,18 @@ dist
 
 # TernJS port file
 .tern-port
+
+# macOS
+.DS_Store
+
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Project things
+config.json
+temp/*
